Switch the ITs to run the BB API server in Wildfly instead of Jetty.
CBBF-31